tests/negative/import6_a.toit
// Copyright (C) 2018 Toitware ApS. All rights reserved.

// Nothing.
